--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-typescript": "^7.10.4",
     "@babel/register": "^7.11.5",
+    "@types/blessed": "^0.1.17",
+    "@types/react": "^16.9.49",
+    "@types/react-blessed": "^0.3.2",
+    "@types/react-router": "^5.1.8",
     "apollo": "^2.31.0",
     "apollo-boost": "^0.4.9",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -35,10 +39,6 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.11.6",
-    "@babel/core": "^7.11.6",
-    "@types/blessed": "^0.1.17",
-    "@types/react": "^16.9.49",
-    "@types/react-blessed": "^0.3.2",
-    "@types/react-router": "^5.1.8"
+    "@babel/core": "^7.11.6"
   }
 }
